--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev" : "parcel ./index.html",
-    "build": "parcel build ./index.html"
+    "dev": "parcel ./index.html",
+    "build": "parcel build ./index.html",
+    "vercel": "vercel dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "dotenv": "^16.3.1",
+    "parcel": "^2.9.3",
+    "vercel": "^31.2.2"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.12"
   }
 }
